EMP-2 Add grading servuce (#4)
